More term improvements

--- a/preamble.tex
+++ b/preamble.tex
@@ -148,6 +148,7 @@
 \newcommand*{\ang}[1]{\langle#1\rangle}
 
 % GP terms
+\renewcommand*{\hash}{\mathcal{H}}
 \newcommand*{\goodset}{\psi_\mathbf{g}}
 \newcommand*{\badset}{\psi_\mathbf{b}}
 \newcommand*{\wonkyset}{\psi_\mathbf{w}}
@@ -159,18 +160,19 @@
 \newcommand*{\xtpreimages}{\mathbf{E}_P}
 
 % TODO: Use non-prefixed items for common fields:
-\newcommand*{\¬gaslimit}{g}
-\newcommand*{\¬service}{s}
+\newcommand*{\¬gaslimit}{g} % also used for ¬refgaslimit
+\newcommand*{\¬service}{s} % also used for ¬avspec
 \newcommand*{\¬payloadhash}{y}
+\newcommand*{\¬payload}{\mathbf{y}}
 \newcommand*{\¬result}{\mathbf{d}}
 \newcommand*{\¬authtrace}{\mathbf{o}}
-\newcommand*{\¬core}{c}
-\newcommand*{\¬authorizer}{a}
+\newcommand*{\¬core}{c} % also used for ¬codehash
+\newcommand*{\¬authorizer}{a} % also used for ¬accgaslimit
 
 \newcommand*{\wp¬authtoken}{\mathbf{j}}
 \newcommand*{\wp¬authcodehost}{h}
 \newcommand*{\wp¬authcodehash}{u}
-\newcommand*{\wp¬authparam}{\mathbf{p}}
+\newcommand*{\wp¬authconfig}{\mathbf{p}}
 \newcommand*{\wp¬context}{\mathbf{x}} % Consider rename to \mathbf{c}
 \newcommand*{\wp¬workitems}{\mathbf{w}}
 
@@ -178,10 +180,14 @@
 \newcommand*{\wp¬authcode}{\mathbf{c}}
 \newcommand*{\wp¬metadata}{\mathbf{m}}
 
+\newcommand*{\wi¬service}{\¬service}
+\newcommand*{\wi¬codehash}{c}
+\newcommand*{\wi¬payload}{\¬payload}
+\newcommand*{\wi¬refgaslimit}{g}
+\newcommand*{\wi¬accgaslimit}{a}
+\newcommand*{\wi¬exportsegments}{e}
 \newcommand*{\wi¬importsegments}{\mathbf{i}}
 \newcommand*{\wi¬extrinsics}{\mathbf{x}}
-\newcommand*{\wi¬exportsegments}{e}
-\newcommand*{\wi¬codehash}{c}
 
 \newcommand*{\wr¬avspec}{s}
 \newcommand*{\wr¬context}{x} % TODO: Consider renaming to \mathbf{c} and/or making bold, like package
