--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -73,7 +73,7 @@ Restated, we must be able to define some \emph{historical} lookup function $\Lam
 \begin{aligned}
   \Lambda\colon \left\{\ \begin{aligned}
     (\mathbb{A}, \N_{\mathbf{H}_t - \mathsf{D}\dots\mathbf{H}_t}, \mathbb{H}) &\to \mathbb{Y}\bm{?} \\
-    (\mathbf{a}, t, \mathcal{H}(\mathbf{p})) &\mapsto v : v \in \{ \mathbf{p}, \none \}
+    (\mathbf{a}, t, \hash(\mathbf{p})) &\mapsto v : v \in \{ \mathbf{p}, \none \}
   \end{aligned}\right.
 \end{aligned}
 \end{equation}
@@ -87,7 +87,7 @@ The preimage lookup for some service of index $s$ is denoted $\delta[s]_\mathbf{
 The state of the lookup system naturally satisfies a number of invariants. Firstly, any preimage value must correspond to its hash, equation \ref{eq:preimageconstraints}. Secondly, a preimage value being in state implies that its hash and length pair has some associated status, also in equation \ref{eq:preimageconstraints}. Formally:
 \begin{equation}\label{eq:preimageconstraints}
   \forall a \in \mathbb{A}, (h \mapsto \mathbf{p}) \in a_\mathbf{p} \Rightarrow
-    h = \mathcal{H}(\mathbf{p})\wedge
+    h = \hash(\mathbf{p})\wedge
     \tup{h \ts |\mathbf{p}|} \in \keys{a_\mathbf{l}}
 \end{equation}
 
