--- a/text/auditing.tex
+++ b/text/auditing.tex
@@ -63,8 +63,8 @@ In all cases, we publish a signed statement of which of the cores we believe we 
 
 Formally, for each tranche $n$ we ensure the announcement statement is published and distributed to all other validators along with our validator index $v$, evidence $s_n$ and all signed data. Validator's announcement statements must be in the set $S$:
 \begin{align}
-  S &\equiv \sig{\kappa[v]_e}{\mathsf{X}_I \doubleplus n \concat \mathbf{x}_n \concat \mathcal{H}(\mathbf{H})} \\
-  \where \mathbf{x}_n &= \se([\se_2(c) \frown \mathcal{H}(w) \mid \tup{c, w} \in \mathbf{a}_n])\\
+  S &\equiv \sig{\kappa[v]_e}{\mathsf{X}_I \doubleplus n \concat \mathbf{x}_n \concat \hash(\mathbf{H})} \\
+  \where \mathbf{x}_n &= \se([\se_2(c) \frown \hash(w) \mid \tup{c, w} \in \mathbf{a}_n])\\
   \mathsf{X}_I &= \token{\$jam\_announce}
 \end{align}
 
@@ -84,7 +84,7 @@ We are able to define $\mathbf{a}_n$ for tranches beyond the first on the basis 
 We can thus define $\mathbf{a}_n$ beyond the initial tranche through a new \textsc{vrf} which acts upon the set of \emph{no-show} validators.
 \begin{align}
   \nonumber\forall n > 0:&\\
-  \ s_n(w) &\in \bandersig{\kappa[v]_b}{\mathsf{X}_U \concat \banderout{\mathbf{H}_v}\concat\mathcal{H}(w)\doubleplus n}{[]} \\
+  \ s_n(w) &\in \bandersig{\kappa[v]_b}{\mathsf{X}_U \concat \banderout{\mathbf{H}_v}\concat\hash(w)\doubleplus n}{[]} \\
   \ \mathbf{a}_n &\equiv \{ \textstyle\frac{\mathsf{V}}{256\mathsf{F}}\banderout{s_n(w)}_0 < m_n \mid w \in \mathbf{Q}, w \ne \none \}\!\!\!\!\\
   \nonumber \where m_n &= |A_{n - 1}(w) \setminus J_\top(w)|
 \end{align}
@@ -118,7 +118,7 @@ Note that a failure to decode implies an invalid work-report.
 
 From this mapping the validator issues a set of judgments $\mathbf{j}_n$:
 \begin{align}
-  \mathbf{j}_n &= \{ \mathcal{S}_{\kappa[v]_e}(\mathsf{X}_{e(w)} \concat \mathcal{H}(w)) \mid (c, w) \in \mathbf{a}_n \}
+  \mathbf{j}_n &= \{ \mathcal{S}_{\kappa[v]_e}(\mathsf{X}_{e(w)} \concat \hash(w)) \mid (c, w) \in \mathbf{a}_n \}
 \end{align}
 
 %We denote the guarantors of a work-package $w$ as $\mathbf{G}(w)$ from a particular chain head, and this may be derived from the guarantees extrinsic $\xtguarantees$ of the ancestor block which introduced the work-report. Our restrictions on the guarantees extrinsic (described in section \ref{sec:accumulation}) ensures that this is unique.
