--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -16,12 +16,12 @@ We define an item $n$ comprising the new block's header hash, its accumulation-r
 \begin{equation}
   \begin{aligned}
     \label{eq:buildbeefymap}
-    \using r &= \mathcal{M}_B(\orderby{s}{\se_4(s)\frown\se(h) \mid (s, h) \in \beefycommitmap}, \mathcal{H}_K) \\
-    \using \mathbf{b} &= \mathcal{A}(\text{last}(\sq{\sq{}} \concat \sq{x_\mathbf{b} \mid x \orderedin \beta}), r, \mathcal{H}_K) \\
+    \using r &= \mathcal{M}_B(\orderby{s}{\se_4(s)\frown\se(h) \mid (s, h) \in \beefycommitmap}, \hash_K) \\
+    \using \mathbf{b} &= \mathcal{A}(\text{last}(\sq{\sq{}} \concat \sq{x_\mathbf{b} \mid x \orderedin \beta}), r, \hash_K) \\
     \using \mathbf{p} &= \{ ((g_w)_s)_h \mapsto ((g_w)_s)_e \mid g \in \xtguarantees \} \\
     \using n &= \tup{
       \mathbf{p}\ts
-      \is{h}{\mathcal{H}(\mathbf{H})}\ts\mathbf{b}\ts\is{s}{\H^0}
+      \is{h}{\hash(\mathbf{H})}\ts\mathbf{b}\ts\is{s}{\H^0}
     }
   \end{aligned}
 \end{equation}
